# python-wordsegment

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  appveyor.yml  lowercase_ngrams.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wordsegment.py
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  python-load-dict-fast-from-file.ipynb  python-load-dict-fast-from-file.rst  using-a-different-corpus.ipynb  using-a-different-corpus.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_templates/: gumroad.html
tests/: bigrams.txt  context.py  test.txt  test_coverage.py  unigrams.txt
wordsegment/: __init__.py  __main__.py  words.txt
