[metadata]
name = wordsegment
author = Grant Jenks
author_email = contact@grantjenks.com
license = Apache 2.0
description = English word segmentation.
url = http://www.grantjenks.com/docs/wordsegment/
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
tests_require = tox
packages = wordsegment
